<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.investigatorparty.InvestigatorActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:menu="@menu/navigation" />

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_female1" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/occupationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/occupationLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/birthplaceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/birthplaceLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/ageLabel" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ageLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/occupationLabel" />

    <TextView
        android:id="@+id/hitPointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hitPointsLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/birthplaceLabel" />

    <TextView
        android:id="@+id/sanityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sanityLabel"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/hitPointsLabel" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Michael Gladdish"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
        app:layout_constraintStart_toEndOf="@+id/occupationLabel" />

    <TextView
        android:id="@+id/occupationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Endocrinologist"
        app:layout_constraintBaseline_toBaselineOf="@+id/occupationLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue" />

    <TextView
        android:id="@+id/ageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="40"
        app:layout_constraintBaseline_toBaselineOf="@+id/ageLabel"
        app:layout_constraintStart_toStartOf="@+id/occupationValue" />

    <TextView
        android:id="@+id/birthplaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cheyenne, MO"
        app:layout_constraintBaseline_toBaselineOf="@+id/birthplaceLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue" />

    <TextView
        android:id="@+id/hitpointValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="15"
        app:layout_constraintBaseline_toBaselineOf="@+id/hitPointsLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue" />

    <TextView
        android:id="@+id/sanityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25"
        app:layout_constraintBaseline_toBaselineOf="@+id/sanityLabel"
        app:layout_constraintStart_toStartOf="@+id/nameValue" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/skillTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
